# python-claude-template

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: claude-config-auditor.md  fastapi-builder.md
.claude/commands/: audit-claude.md  commit.md  feature.md  fix-issue.md  fix-spelling.md  make-agent.md  make-command.md  make-skill.md  pr.md  review.md  status.md  test.md  typecheck.md
.claude/skills/python-testing/: SKILL.md
libs/package-example/: pyproject.toml
